destroyed FrmMain algo and built it again in MainAlgo

--- a/MangaSplitter/MangaSplitter.csproj
+++ b/MangaSplitter/MangaSplitter.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
